@@ -1,5 +1,7 @@
 0.52
     - undef no longer equals '' in is_deeply() [rt.cpan.org 6837]
+    - is_deeply() would sometimes compare references as strings.
+      [rt.cpan.org 7031]
 
 0.51  Tue Nov 23 04:51:12 EST 2004
     - Fixed bug in fail_one.t on Windows (not a real bug).
